# thermokourt

./: .gitignore  CITATION.cff  LICENSE  README.md  comp_courtship_assay.toml  environment.yml  idtracker_cca.toml  pyproject.toml
docs/: api.md  architecture.md  conf.py  getting_started.md  index.md  pipeline.md
docs/api/: extract.md  overlay.md  score.md  track.md  utils.md
scripts/slurm/: train_scorer.sh
tests/: test_arena.py
thermokourt/: __init__.py
thermokourt/extract/: arena_extractor.py
thermokourt/overlay/: cli.py
thermokourt/track/: posttrack.py
