[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thermokourt"
version = "0.1.0"
description = "Modular pipeline for analysing Drosophila courtship and aggression under thermal manipulation"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "Bart R.H. Geurten", email = "bart.geurten@otago.ac.nz"},
]
keywords = [
    "drosophila", "courtship", "aggression", "ethogram",
    "temperature", "behavioural-neuroscience", "tracking",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "Pillow>=10.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
track = [
    "opencv-python>=4.8",
    "h5py>=3.9",
    "pandas>=2.0",
]
score = [
    "torch>=2.0",
    "torchvision>=0.15",
    "scikit-learn>=1.3",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "sphinx>=7.2",
    "furo>=2024.1",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc2>=0.5",
]
all = ["thermokourt[track,score,dev]"]

[project.scripts]
thermokourt-extract = "thermokourt.extract.arena_extractor:main"
thermokourt-track = "thermokourt.track.cli:main"
thermokourt-overlay = "thermokourt.overlay.cli:main"

[project.urls]
Homepage = "https://github.com/zerotonin/thermokourt"
Documentation = "https://zerotonin.github.io/thermokourt/"
Repository = "https://github.com/zerotonin/thermokourt"
Issues = "https://github.com/zerotonin/thermokourt/issues"

[tool.setuptools.packages.find]
include = ["thermokourt*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
